--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-chrome",
+            "type": "chrome",
             "request": "launch",
             "name": "Testing Launcher",
             "file": "c:\\Users\\Ana_Piedrahita\\Documents\\JS_Learning\\functions.html"
